--- a/package.json
+++ b/package.json
@@ -50,5 +50,18 @@
     "ts-node": "~7.0.0",
     "tslint": "~5.11.0",
     "typescript": "~3.1.1"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 7.0.2.",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/timoCasti/virtual-exhibition-manager-ui.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/timoCasti/virtual-exhibition-manager-ui/issues"
+  },
+  "homepage": "https://github.com/timoCasti/virtual-exhibition-manager-ui#readme"
 }
